--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+logging:
+  level:
+    org:
+      springframework:
+        transaction:
+          interceptor: trace
